- added support for PHP 7.0 (Thorsten)
- added tag intersection based search (Tomer Weinberg, Thorsten)
- added configuration for enable/disable highlighting search terms (Thorsten)
- added configuration for enable/disable RSS feeds (Thorsten)
- added permissions for guests (Thorsten)
- added support for multiple LDAP/AD servers (Bernhard Müller, Thorsten)
- added frontend dependency management using Bower (Thorsten)
- added possibility to delete all logged search terms (Thorsten)
- added experimental support for bcrypt (Thorsten)
- added support for MySQL sockets
- added possibility to enable/disable gzip compression (Thorsten)
- added possibility for inactive, hidden categories (Thorsten)
- added possibility to disable registraton (Thorsten)
- added possibility to allow anonymous downloads (Thorsten)
- added tag management frontend (Thorsten)
- added full support for SQLite3 (Peter Kehl)
- added control for meta robots handling (Thorsten)
- added configuration for auto-activation of new users (Christopher Andrews)
- added support for SMTP (Christopher Andrews)
- added bundled Typeahead.js (Thorsten)
- added support for custom headers and footers in PDF exports (Thorsten)
- updated bundled Symfony ClassLoader to version 2.6.3 (Thorsten)
- updated bundled jQuery to version 1.11.2 (Thorsten)
- updated bundled Bootstrap to version 3.3.2 (Thorsten)
- updated bundled Font Awesome to version 4.3.0 (Thorsten)
- updated bundled Modernizr to version 2.8.3 (Thorsten)
- updated bundled TinyMCE to version 4.1.7 (Thorsten)
- updated bundles SwiftMailer to version 5.3.1 (Christopher Andrews, Thorsten)
- dropped support for ext/mysql (Thorsten)
- dropped support for SQLite2 (Thorsten)

Version 2.8.21 - 2015-02-
- added experimental rewrite rules for IIS7 and IIS8 (Thorsten)
- improved usability in admin backend (Thorsten)
- improved HTML5 support in editor (Thorsten)
- improved code coverage (Thorsten)
- updated Brazilian Portuguese translation
- fixed some minor bugs (Thorsten)