@@ -14,6 +14,7 @@ Version 2.9.0-alpha3 - 2015-03-
 - added configuration for enable/disable RSS feeds (Thorsten)
 - added permissions for guests (Thorsten)
 - added support for multiple LDAP/AD servers (Bernhard Müller, Thorsten)
+- added experimental support for LDAP dynamic user binding (Thorsten)
 - added frontend dependency management using Bower (Thorsten)
 - added possibility to delete all logged search terms (Thorsten)
 - added experimental support for bcrypt (Thorsten)
